# Classification-of-Tomato-Ripeness

./: CNN.ipynb  Efficientnet.ipynb  README.md  Resnet.ipynb  app.py  class_indices.json  pyproject.toml  requirements.txt
